force-app/main/default/objects/Audit__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>