force-app/main/default/objects/Audit__c/fields/Customer_custom__c.field-meta.xml
<CustomField>
    <fullName>Customer_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer custom</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>