force-app/main/default/objects/Audit__c/fields/Loan_Request__c.field-meta.xml
<CustomField>
    <fullName>Loan_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Request</label>
    <referenceTo>LoanRequest__c</referenceTo>
    <relationshipLabel>Audits</relationshipLabel>
    <relationshipName>Audits</relationshipName>
    <type>Lookup</type>
</CustomField>