force-app/main/default/objects/Audit__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <label>Loan_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Awaiting approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>